--- a/index.html
+++ b/index.html
@@ -449,23 +449,25 @@
                       </div>
                     </div>
                   </div>
-                  <div class="row">
+                  <!-- <div class="row">
                     <div class="form-item col-12 padd-15">
                       <div class="form-group">
                         <input type="text" id="subject" class="form-control" placeholder="Subject" autocomplete="off">
                       </div>
                     </div>
-                  </div>
+                  </div> -->
                   <div class="row">
                     <div class="form-item col-12 padd-15">
                       <div class="form-group">
                         <textarea id="message"  class="form-control" placeholder="Message" ></textarea>
                       </div>
                     </div>
+
+                    <p class="mail-sent">Message Sent Successfully. Thanks for reaching out</p>
                   </div>
                   <div class="row">
                     <div class="form-item col-12 padd-15">
-                     <button onclick="sendMail()" id="send" class="btn">Send Message</button>
+                     <button id="send" class="btn">Send Message</button>
                     </div>
                   </div>
                 </div>
