--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <div class="row">
               <div class="home-info padd-15">
                 <h3 class="hello">
-                  Hello, my name is <span class="name">Paks Promise</span>
+                  Hello, my name is <span class="name">Promise Chukwudi -Paks-</span>
                 </h3>
                 <h3 class="my-profession">
                   I'm a <span class="typing"></span>
@@ -132,7 +132,7 @@
                 <div class="row">
                   <div class="about-text padd-15">
                     <h3>
-                      I'm Paks Promise and <span>FrontEnd Web Developer</span>
+                      I'm Promise Chukwudi Paks and <span>FrontEnd Web Developer</span>
                     </h3>
                     <p>
                       From the day I wrote my first line of code I knew I was
@@ -253,8 +253,8 @@
                             <p class="timeline-text">LinkedIn Clone</p>
                             <p class="timeline-text">Facebook Clone</p>
                             <p class="timeline-text">Nike Product Page Clone</p>
+                            <p class="timeline-text">Movie Website</p>
                             <p class="timeline-text">Chat App</p>
-                            <p class="timeline-text">QRCode Generator App</p>
                             <p class="timeline-text">
                               Random Password Generator App
                             </p>
@@ -434,7 +434,10 @@
               <div class="portfolio-item padd-15">
                 <div class="portfolio-item-inner shadow-dark">
                   <div class="portfolio-img">
-                    <img src="img/portfolio-5.jpg" alt="" />
+                    <a href="https://nike-product-page-paks.netlify.app/">
+                      <img src="img/crisp movies.png" alt="cmovies" />
+                    </a>
+                    <p class="portfolio-title">Crisp Movies</p>
                   </div>
                 </div>
               </div>
@@ -443,7 +446,10 @@
               <div class="portfolio-item padd-15">
                 <div class="portfolio-item-inner shadow-dark">
                   <div class="portfolio-img">
-                    <img src="img/portfolio-6.jpg" alt="" />
+                    <a href="https://nike-product-page-paks.netlify.app/">
+                      <img src="img/crisp movies.png" alt="cmovies" />
+                    </a>
+                    <p class="portfolio-title">Crisp Movies</p>
                   </div>
                 </div>
               </div>
