--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                   I'm a <span class="typing"></span>
                 </h3>
                 <p>
-                  "Detail-oriented Front End Developer with more than a year
+                  "Detail-oriented Front End Developer 1 year plus
                   experience working with HTML, CSS and JavaScript. Highly adept
                   at both independent and collaborative projects with an
                   emphasis on landing page and wesite development"
@@ -139,9 +139,9 @@
                       hacked. My passion for programming led me to master
                       problem solving, the ability to learn quickly and stay on
                       top of new technologies. I am looking for the right
-                      opportunity to develop my career. Below you will find my
-                      recent projects that showcase my skills in front end
-                      development.
+                      opportunity to develop my career. I build 
+                      compelling cross-platform websites with modern design and 
+                      great usability and functionality.
                     </p>
                   </div>
                 </div>
@@ -246,18 +246,12 @@
                           <div class="timeline-item">
                             <div class="circle-dot"></div>
                             <h3 class="timeline-date">
-                              <i class="fa fa-calendar"></i>2022 - Current Date
+                              <i class="fa fa-calendar"></i>2022
                             </h3>
-                            <h4 class="timeline-title">Some Of My Projects</h4>
-                            <p class="timeline-text">E-commerce website</p>
-                            <p class="timeline-text">LinkedIn Clone</p>
-                            <p class="timeline-text">Facebook Clone</p>
-                            <p class="timeline-text">Nike Product Page Clone</p>
-                            <p class="timeline-text">Movie Website</p>
-                            <p class="timeline-text">Chat App</p>
-                            <p class="timeline-text">
-                              Random Password Generator App
-                            </p>
+                            <h4 class="timeline-title">Licenses & certifications</h4>
+                            <p class="timeline-text"> Responsive Web Design</p>
+                            <p class="timeline-text"> JavaScript Algorithms and Data Structures</p>
+                            <p class="timeline-text"> Front End Development Libraries</p>
                           </div>
                         </div>
                       </div>
@@ -434,7 +428,7 @@
               <div class="portfolio-item padd-15">
                 <div class="portfolio-item-inner shadow-dark">
                   <div class="portfolio-img">
-                    <a href="https://nike-product-page-paks.netlify.app/">
+                    <a href="https://crispmovies.netlify.app/">
                       <img src="img/crisp movies.png" alt="cmovies" />
                     </a>
                     <p class="portfolio-title">Crisp Movies</p>
@@ -446,7 +440,7 @@
               <div class="portfolio-item padd-15">
                 <div class="portfolio-item-inner shadow-dark">
                   <div class="portfolio-img">
-                    <a href="https://nike-product-page-paks.netlify.app/">
+                    <a href="https://crispmovies.netlify.app/">
                       <img src="img/crisp movies.png" alt="cmovies" />
                     </a>
                     <p class="portfolio-title">Crisp Movies</p>
