--- a/index.html
+++ b/index.html
@@ -249,9 +249,9 @@
                               <i class="fa fa-calendar"></i>2022
                             </h3>
                             <h4 class="timeline-title">Licenses & certifications</h4>
-                            <p class="timeline-text"> Responsive Web Design</p>
-                            <p class="timeline-text"> JavaScript Algorithms and Data Structures</p>
-                            <p class="timeline-text"> Front End Development Libraries</p>
+                            <a href="https://www.freecodecamp.org/certification/PromisePaks/responsive-web-design"><p class="timeline-text"> Responsive Web Design</p></a>
+                            <a href="https://www.freecodecamp.org/certification/PromisePaks/javascript-algorithms-and-data-structures"><p class="timeline-text"> JavaScript Algorithms and Data Structures</p></a>
+                            <a href="https://www.freecodecamp.org/certification/PromisePaks/front-end-development-libraries"><p class="timeline-text"> Front End Development Libraries</p></a>
                           </div>
                         </div>
                       </div>
