--- a/index.html
+++ b/index.html
@@ -98,16 +98,15 @@
             <div class="row">
               <div class="home-info padd-15">
                 <h3 class="hello">
-                  Hello, my name is <span class="name">Promise Chukwudi -Paks-</span>
+                  Hey there!, I am <span class="name">Promise Chukwudi -Paks-</span>
                 </h3>
                 <h3 class="my-profession">
                   I'm a <span class="typing"></span>
                 </h3>
                 <p>
-                  "Detail-oriented Front End Developer 1 year plus
-                  experience working with HTML, CSS and JavaScript. Highly adept
-                  at both independent and collaborative projects with an
-                  emphasis on landing page and wesite development"
+                  "Detail-oriented Front End Developer passionate about crafting amazing web experiences.
+                  With a strong foundation in HTML, CSS and JavaScript. Highly adept at both independent
+                   and collaborative projects with an emphasis on landing page and website development"
                 </p>
                 <a href="Paks Resume.pdf" download class="btn">Download CV</a>
               </div>
@@ -132,16 +131,38 @@
                 <div class="row">
                   <div class="about-text padd-15">
                     <h3>
-                      I'm Promise Chukwudi Paks and <span>FrontEnd Web Developer</span>
+                      I'm Promise Chukwudi Paks and a <span>FrontEnd Web Developer</span>
                     </h3>
                     <p>
                       From the day I wrote my first line of code I knew I was
                       hacked. My passion for programming led me to master
                       problem solving, the ability to learn quickly and stay on
-                      top of new technologies. I am looking for the right
-                      opportunity to develop my career. I build 
-                      compelling cross-platform websites with modern design and 
-                      great usability and functionality.
+                      top of new technologies. I enjoy building innovative, 
+                      user-friendly interfaces that delight users and drive business results. <br>
+
+                      <br>
+                      As someone who has always had a passion for improving with technology,
+                       I found myself drawn to web development and it quickly turned into a
+                      full-blown passion. <br>
+
+                      <br>
+                      As a Front-End Developer with a passion for both coding and design,
+                       I am constantly seeking out new ways to bring my creative vision to life or 
+                       seeking inspiration in the world around me. I am a firm believer in the 
+                       power of collaboration and enjoy working closely with designers 
+                       and development teams to ensure that projects are delivered on time and exceed 
+                       expectations. <br>
+
+                       <br>
+                       What I love most about Front-End Development is the way that it combines 
+                       creativity with technical skills. It's a constantly evolving field that
+                        demands both artistry and precision, and I relish the opportunity to explore
+                         new technologies and techniques that help me stay ahead of the curve. <br>
+
+                         <br>
+                         Whether you're looking to create a brand-new website from scratch or
+                          revamp an existing one. I'm here to help. Let's work together 
+                           to build something truly exceptional!
                     </p>
                   </div>
                 </div>
